# docs/swagger.json
@@ -42,6 +42,12 @@
                             "$ref": "#/definitions/handlers.rejectedResponse"
                         }
                     },
+                    "413": {
+                        "description": "Request Entity Too Large",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.rejectedResponse"
+                        }
+                    },
                     "503": {
                         "description": "Bank unavailable"
                     }
